AUTOMAKE_OPTIONS = no-dependencies

EXTRA_DIST = \
	regress.out \
	regress.out.xma \
	adr-001.awk \
	adr-002.awk \
	asm.awk \
	cou-001.awk \
	cou-002.awk \
	cou-003.awk \
	cou-004.awk \
	cou-005.awk \
	cou-006.awk \
	cou-007.awk \
	cou-008.awk \
	cou-009.awk \
	cou-010.awk \
	cou-011.awk \
	cou-012.awk \
	cou-013.awk \
	cou-014.awk \
	cou-015.awk \
	cou-016.awk \
	cou-017.awk \
	cou-018.awk \
	cou-019.awk \
	cou-020.awk \
	cou-021.awk \
	cou-022.awk \
	cou-023.awk \
	cou-024.awk \
	cou-025.awk \
	cou-026.awk \
	cou-027.awk \
	emp-001.awk \
	emp-002.awk \
	emp-003.awk \
	emp-004.awk \
	emp-005.awk \
	emp-006.awk \
	emp-007.awk \
	emp-008.awk \
	emp-009.awk \
	emp-010.awk \
	emp-011.awk \
	emp-012.awk \
	emp-013.awk \
	emp-014.awk \
	emp-015.awk \
	emp-016.awk \
	emp-017.awk \
	emp-018.awk \
	emp-019.awk \
	emp-020.awk \
	emp-021.awk \
	emp-022.awk \
	emp-023.awk \
	emp-024.awk \
	emp-025.awk \
	emp-026.awk \
	emp-027.awk \
	hanoi.awk \
	indent.awk \
	lang-001.awk \
	lang-002.awk \
	lang-003.awk \
	lang-004.awk \
	lang-005.awk \
	lang-006.awk \
	lang-007.awk \
	lang-008.awk \
	lang-009.awk \
	lang-010.awk \
	lang-011.awk \
	lang-012.awk \
	lang-013.awk \
	lang-014.awk \
	lang-015.awk \
	lang-016.awk \
	lang-017.awk \
	lang-018.awk \
	lang-019.awk \
	lang-020.awk \
	lang-021.awk \
	lang-022.awk \
	lang-023.awk \
	lang-024.awk \
	lang-025.awk \
	lang-026.awk \
	lang-027.awk \
	lang-028.awk \
	lang-029.awk \
	lang-030.awk \
	lang-031.awk \
	lang-032.awk \
	lang-033.awk \
	lang-034.awk \
	lang-035.awk \
	lang-036.awk \
	lang-037.awk \
	lang-038.awk \
	lang-039.awk \
	lang-040.awk \
	lang-041.awk \
	lang-042.awk \
	lang-043.awk \
	lang-044.awk \
	lang-045.awk \
	lang-046.awk \
	lang-047.awk \
	lang-048.awk \
	lang-049.awk \
	lang-050.awk \
	lang-051.awk \
	lang-052.awk \
	lang-053.awk \
	lang-054.awk \
	columnate.awk \
	levenshtein.awk \
	levenshtein-utests.awk \
	rcalc.awk \
	quicksort2.awk \
	quicksort.awk \
	stripcomment.awk \
	unr-001.awk \
	wordfreq.awk \
	lang-035.dat1 \
	lang-035.dat2 \
	lang-036.dat \
	lang-037.dat \
	lang-043.dat \
	lang-044.dat \
	adr.dat \
	asm.dat \
	cou.dat \
	emp.dat \
	indent.dat \
	passwd.dat \
	quicksort2.dat \
	quicksort.dat \
	stripcomment.dat \
	unr.dat \
	asm.s \
	lisp/awklisp \
	lisp/lists \
	lisp/perlisp \
	lisp/tail.lsp \
	lisp/eliza.dat \
	lisp/Manual \
	lisp/README \
	lisp/test.scm \
	lisp/eliza.lsp \
	lisp/numbers \
	lisp/scheme.lsp \
	lisp/trace \
	lisp/fib.lsp \
	lisp/numbers.dat \
	lisp/scmhelp.lsp \
	lisp/Impl-notes \
	lisp/old-awklisp \
	lisp/startup

all-local:
	chmod +x $(DESTDIR)$(builddir)/regress.sh
