pkgincludedir = $(includedir)/qse/si

pkginclude_HEADERS = \
	cnd.h \
	dir.h \
	fio.h  \
	fs.h \
	glob.h \
	intr.h \
	log.h \
	mtx.h \
	mux.h \
	netlink.h \
	nwad.h \
	nwif.h \
	nwio.h  \
	os.h \
	pio.h  \
	rwl.h \
	sck.h \
	sinfo.h \
	sio.h  \
	spl.h \
	task.h \
	thr.h \
	tio.h

if ENABLE_CXX
pkginclude_HEADERS += \
	App.hpp \
	Condition.hpp \
	Mutex.hpp \
	Path.hpp \
	SocketAddress.hpp \
	Socket.hpp \
	SpinLock.hpp \
	TcpServer.hpp \
	Thread.hpp
endif

